# helix-db

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  procdata.py  queries.rs
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/workflows/: cli.yml
docs/: ideas.md  simulation-testing.md
examples/rag_demo/: README.md  rag_rust_demo.ipynb
examples/rag_demo/helixdb-cfg/: config.hx.json  queries.hx  schema.hx
get-routes/: Cargo.toml
get_routes/: Cargo.toml
get_routes/src/: lib.rs
hbuild/: Cargo.toml
hbuild/src/: main.rs
helix-cli/: Cargo.toml  build.sh  install.sh
helix-cli/src/: args.rs  instance_manager.rs  main.rs  runner.rs  styled_string.rs  types.rs  utils.rs
helix-container/: Cargo.toml
helix-container/src/: ivba_traversals.rs  lib.rs  main.rs  q.rs  queries.rs  traversals.rs
helix-db/: Cargo.toml
helix-engine/: Cargo.toml
helix-engine/benches/: graph_benchmarks.rs
helix-engine/src/: lib.rs  macros.rs  types.rs
helix-engine/src/graph_core/: count.rs  graph_core.rs  mod.rs  traversal.rs  traversal_steps.rs  traversal_value.rs
helix-engine/src/storage_core/: mod.rs  storage_core.rs  storage_methods.rs  vectors.rs
helix-gateway/: Cargo.toml
helix-gateway/src/: lib.rs
helix-gateway/src/connection/: connection.rs
helix-gateway/src/router/: router.rs
helix-gateway/src/thread_pool/: thread_pool.rs
helix-lite/: Cargo.toml  build.rs  build.sh  index.d.ts  index.js  package-lock.json  package.json
helix-lite/src/: helix.udl  lib.rs
helix-lite/src/bindings/: bindgen.rs  js_binding.rs  kotlin_bindings.rs  mod.rs  swift_binding.rs
helixc/: Cargo.toml  grammar.pest  grammarOld.pest
helixc/src/: main.rs
helixc/src/generator/: mod.rs  project_gen.rs  query_gen.rs
helixc/src/parser/: helix_parser.rs  parser_methods.rs
helixdb/: Cargo.toml  run.sh  schema.hx
helixdb/benches/: graph_benchmarks.rs  vector_benchmarks.rs
helixdb/src/: grammar.pest  helix_storage.rs  lib.rs
helixdb/src/helix_engine/: macros.rs  mod.rs  types.rs
helixdb/src/helix_engine/bm25/: README.md  bm25.rs  bm25_tests.rs  mod.rs
helixdb/src/helix_engine/graph_core/: config.rs  graph_core.rs  mod.rs  traversal.rs  traversal_iter.rs  traversal_steps.rs  traversal_tests.rs
helixdb/src/helix_engine/graph_core/ops/: drop.rs  filter_ref.rs  g.rs  in_.rs  in_edges.rs  in_v.rs  mod.rs  out.rs  out_edges.rs  out_v.rs  tests.rs  tr_val.rs  update.rs  v.rs
helixdb/src/helix_engine/graph_core/ops/bm25/: mod.rs  search_bm25.rs
helixdb/src/helix_engine/graph_core/ops/in_/: in_.rs  in_e.rs  in_v.rs  mod.rs  to_n.rs
helixdb/src/helix_engine/graph_core/ops/source/: add_e.rs  add_n.rs  add_v.rs  bulk_add_e.rs  bulk_add_n.rs  e.rs  e_from_id.rs  e_from_type.rs  e_from_types.rs  mod.rs  n.rs  n_from_id.rs  n_from_index.rs  n_from_type.rs  n_from_types.rs  v.rs  v_from_id.rs  v_from_types.rs
helixdb/src/helix_engine/graph_core/ops/util/: dedup.rs  drop.rs  filter_mut.rs  filter_ref.rs  map.rs  mod.rs  paths.rs  props.rs  range.rs  update.rs
helixdb/src/helix_engine/graph_core/ops/vectors/: brute_force_search.rs  insert.rs  search.rs
helixdb/src/helix_engine/ingestion_core/: sqlite.rs  sqlite_tests.rs
helixdb/src/helix_engine/ingestion_engine/: mod.rs  sqlite.rs  sqlite_tests.rs
helixdb/src/helix_engine/storage_core/: hnsw.rs  hnsw_tests.rs  mod.rs  storage_core.rs  storage_methods.rs  txn_context.rs  vectors.rs
helixdb/src/helix_engine/vector_core/: hnsw.rs  hnsw_tests.rs  mod.rs  vector.rs  vector_core.rs  vector_core_rewrite.rs  vector_core_tests.rs  vector_tests.rs
helixdb/src/helix_gateway/: gateway.rs  mod.rs
helixdb/src/helix_gateway/connection/: connection.rs
helixdb/src/helix_gateway/mcp/: call.rs  mcp.rs  mod.rs  tools.rs
helixdb/src/helix_gateway/router/: router.rs
helixdb/src/helix_gateway/thread_pool/: thread_pool.rs
helixdb/src/helix_runtime/: mod.rs  tokio_runtime.rs
helixdb/src/helix_storage/: lmdb_storage.rs  mod.rs
helixdb/src/helix_transport/: mod.rs  tcp_transport.rs  tokio_transport.rs
helixdb/src/helixc/: PLAN.md  mod.rs
helixdb/src/helixc/analyzer/: README.md  analyzer.rs  error_codes.rs  fix.rs  mod.rs  pretty.rs  types.rs
helixdb/src/helixc/generator/: bool_op.rs  example.rs  generator.rs  generator_output.rs  generator_test.rs  generator_types.rs  mod.rs  project_gen.rs  source_steps.rs  traversal_steps.rs  tsdisplay.rs  utils.rs
helixdb/src/helixc/generator/new/: bool_op.rs  generator_output.rs  generator_types.rs  mod.rs  new_generator.rs  object_remapping_generation.rs  source_steps.rs  traversal_steps.rs  types.rs  utils.rs
helixdb/src/helixc/interpreter/: interpreter.rs
helixdb/src/helixc/parser/: helix_parser.rs  location.rs  mod.rs  parser_methods.rs
helixdb/src/ingestion_engine/: init.sql  mod.rs  postgres_ingestion.rs  postgres_tests.rs  sql_ingestion.rs  sqlite.rs  sqlite_tests.rs  start_pg.sh
helixdb/src/protocol/: count.rs  date.rs  filterable.rs  id.rs  items.rs  label_hash.rs  mod.rs  remapping.rs  request.rs  response.rs  return_values.rs  serdes.rs  traversal_value.rs  value.rs
ivba/: queries.hx  queries.rs
protocol/: Cargo.toml
protocol/src/: count.rs  filterable.rs  lib.rs  request.rs  response.rs  traversal_value.rs
