[package]
name = "helix-container"
version = "0.1.0"
edition = "2021"

[dependencies]
helixdb = { path = "../helixdb" }
get_routes = { path = "../get_routes" }
inventory = "0.3.16"
rand = "0.9.1"
dirs = "5.0.1"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
sonic-rs = "0.5.0"
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0.140"
uuid = { version = "1.12.1", features = ["std", "v4", "v6", "fast-rng"] }
heed3 = "0.22.0"
[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"

