[package]
name = "helix-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
heed3 = "0.21.0"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
tempfile = "3.16.0"
rand = "0.9.0"
protocol = { path = "../protocol" }
serde_json = "1.0.138"
helixc = { path = "../helixc" }
bincode = "1.3.3"
sonic-rs = "0.3"

[dev-dependencies]
criterion = "0.5"
rand = "0.9.0"
tempfile = "3.2"

[[bench]]
name = "graph_benchmarks"
harness = false

[lib]
name = "helix_engine"
path = "src/lib.rs"
# crate-type = ["cdylib", "rlib", "staticlib"]

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"

[[bin]]
name = "helix_engine"
path = "src/lib.rs"
