[package]
name = "helix-lite"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
helixdb = { path = "../helixdb" }
chrono = "0.4"
inventory = "0.3.16"
rand = "0.8.5"
napi = { version = "2.16.13", features = ["napi4"] }
napi-derive = "2.16.13"
uniffi = "0.28.3"
serde_json = "1.0.68"
jni = "0.21.1"
camino = "1.1.6"
uniffi_bindgen = "0.28.3"
dirs = "5.0.1"


[build-dependencies]
weedle = "0.13.0"
uniffi = { version = "0.28.3", features = ["build"] }
uniffi_bindgen = "0.28.3"
camino = "1.1.6"
napi-build = "2.1.4"
uniffi_udl = "0.28.3"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
napi = { version = "2.16.13", features = ["napi4"] }

[lib]
name = "helix_lite"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "bindgen"
path = "src/bindings/bindgen.rs"

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"

[target.'cfg(target_os = "macos")']
rustflags = [
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
    "-C", "link-arg=-Wl,-rpath,@loader_path",
]