[package]
name = "helixdb"
version = "1.0.85"
edition = "2021"
description = "HelixDB is a multi-model database built for performance and simplicity."
license = "GPL-3.0"
authors = ["HelixDB Team"]
repository = "https://github.com/HelixDB/helix-db"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.110"
bincode = "1.3.3"                                                         # TODO: Figure out bincode 2 impl with current serde impl
sonic-rs = "0.5.0"
inventory = "0.3.16"
twox-hash = "2.1.0"
heed3 = "0.22.0"
uuid = { version = "1.12.1", features = ["std", "v4", "v6", "fast-rng"] }
rand = "0.9.0"
dirs = "6.0.0"
chrono = "0.4.39"
flume = "0.11.1"
rayon = "1.8.0"
itertools = "0.14.0"
colored = "2.1.0"

# Compiler
pest = { version = "2.7", optional = true }
pest_derive = { version = "2.7", optional = true }

# Ingestion
rust_decimal = { version = "1.34", features = ["tokio-pg"], optional = true }
native-tls = { version = "0.2.11", optional = true }
postgres-native-tls = { version = "0.5", optional = true }
pgvector = { version = "0.4.0", features = ["postgres"], optional = true }
reqwest = { version = "0.12.15", features = [
    "json",
    "blocking",
], optional = true }
rusqlite = { version = "0.35.0", features = ["bundled"], optional = true }
tokio-postgres = { version = "0.7", features = [
    "with-uuid-1",
    "with-chrono-0_4",
], optional = true }

tempfile = { version = "3.2", optional = true }

[dev-dependencies]
rand = "0.9.0"
lazy_static = "1.4.0"
polars = { version = "0.46.0", features = ["parquet", "lazy", "json"] }
kdam = "0.3"

[features]
compiler = ["pest", "pest_derive"]
cosine = []
ingestion = [
    "rusqlite",
    "tokio-postgres",
    "pgvector",
    "postgres-native-tls",
    "reqwest",
    "native-tls",
    "rust_decimal",
    "tempfile"
]
build = ["compiler"]
full = ["build", "compiler", "ingestion", "cosine"]
default = ["full"]

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"
