[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
inventory = "0.3.16"
serde_json = "1.0.70"
sonic-rs = "0.3"
bincode = "1.3.3"
[lib]
name = "protocol"
path = "src/lib.rs"
# crate-type = ["cdylib", "rlib", "staticlib"]